--- a/src/componentes/Jogador/Jogador.css
+++ b/src/componentes/Jogador/Jogador.css
@@ -35,3 +35,10 @@
     color: #212121;
     padding: 0 16px;
 }
+
+.jogador  .rodape h6 {
+    font-size: 18px;
+    line-height: 22px;
+    color: #212121;
+    padding: 0 16px;
+}
